<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scroll"
    android:layout_height="match_parent"
    tools:context=".View.AddNotes">
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".View.AddNotes">
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/background_style"
        android:hint="@string/add_title"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/writeNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_style"
        android:hint="@string/add_notes"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/upload_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeNotes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".41"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_label_textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

        <TextView
            android:id="@+id/camera_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/camera"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".40"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_style"
        app:layout_constraintBottom_toBottomOf="@+id/camera_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/gallery_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gallery" />

        <TextView
            android:id="@+id/gallery_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/gallery"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/gallery_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gallery_imageView"
            app:layout_constraintTop_toTopOf="@+id/gallery_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/uploaded_image_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/background_style"
        app:layout_constraintEnd_toEndOf="@+id/gallery_constraintLayout"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/camera_constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/gallery_constraintLayout" />

    <TextView
        android:id="@+id/upload_video_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploaded_image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".41"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_video_label_textView">

        <ImageView
            android:id="@+id/video_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

        <TextView
            android:id="@+id/video_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/video"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/video_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/video_imageView"
            app:layout_constraintTop_toTopOf="@id/video_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_gallery_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".40"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_style"
        app:layout_constraintBottom_toBottomOf="@+id/video_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/gallery_video_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gallery" />

        <TextView
            android:id="@+id/gallery_video_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/gallery"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/gallery_video_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gallery_video_imageView"
            app:layout_constraintTop_toTopOf="@+id/gallery_video_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <VideoView
        android:id="@+id/uploaded_video_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/background_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_gallery_constraintLayout" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/save"
        app:backgroundTint="#0DC80D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploaded_video_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>